--- a/ScraperFullStackMVC/ScraperFullStackMVC.csproj
+++ b/ScraperFullStackMVC/ScraperFullStackMVC.csproj
@@ -90,6 +90,8 @@
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.5.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -181,13 +183,32 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Stocks1Controller.cs" />
+    <Compile Include="Controllers\StocksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Stock.cs" />
+    <Compile Include="Models\StockPortfolio.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StockPortfolio.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StockPortfolio.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StockPortfolio.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StockPortfolio.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StockPortfolio.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Stocks.cs">
+      <DependentUpon>StockPortfolio.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scrape.cs" />
     <Compile Include="Startup.cs" />
@@ -202,6 +223,16 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\StockPortfolio.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StockPortfolio.edmx</DependentUpon>
+      <LastGenOutput>StockPortfolio.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\StockPortfolio.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StockPortfolio.edmx</DependentUpon>
+      <LastGenOutput>StockPortfolio.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -224,6 +255,13 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
+    <EntityDeploy Include="Models\StockPortfolio.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>StockPortfolio.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\StockPortfolio.edmx.diagram">
+      <DependentUpon>StockPortfolio.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -288,15 +326,27 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Stocks\Create.cshtml" />
+    <Content Include="Views\Stocks\Delete.cshtml" />
+    <Content Include="Views\Stocks\Details.cshtml" />
+    <Content Include="Views\Stocks\Edit.cshtml" />
+    <Content Include="Views\Stocks\Index.cshtml" />
+    <Content Include="Views\Stocks1\Create.cshtml" />
+    <Content Include="Views\Stocks1\Delete.cshtml" />
+    <Content Include="Views\Stocks1\Details.cshtml" />
+    <Content Include="Views\Stocks1\Edit.cshtml" />
+    <Content Include="Views\Stocks1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Portfolio\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
