--- a/ScraperFullStackMVC/bin/ScraperFullStackMVC.dll.config
+++ b/ScraperFullStackMVC/bin/ScraperFullStackMVC.dll.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ScraperFullStackMVC-20190617120846.mdf;Initial Catalog=aspnet-ScraperFullStackMVC-20190617120846;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StockDatabaseEntities" connectionString="metadata=res://*/Models.StockPortfolio.csdl|res://*/Models.StockPortfolio.ssdl|res://*/Models.StockPortfolio.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=StockDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
