fixed broken stocks route

--- a/ScraperFullStackMVC/ScraperFullStackMVC.csproj
+++ b/ScraperFullStackMVC/ScraperFullStackMVC.csproj
@@ -183,7 +183,6 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\Stocks1Controller.cs" />
     <Compile Include="Controllers\StocksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -191,6 +190,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\StockModel.cs" />
     <Compile Include="Models\StockPortfolio.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -331,11 +331,6 @@
     <Content Include="Views\Stocks\Details.cshtml" />
     <Content Include="Views\Stocks\Edit.cshtml" />
     <Content Include="Views\Stocks\Index.cshtml" />
-    <Content Include="Views\Stocks1\Create.cshtml" />
-    <Content Include="Views\Stocks1\Delete.cshtml" />
-    <Content Include="Views\Stocks1\Details.cshtml" />
-    <Content Include="Views\Stocks1\Edit.cshtml" />
-    <Content Include="Views\Stocks1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
