fixing up some waits and stocks page cshtml

--- a/ScraperFullStackMVC/ScraperFullStackMVC.csproj
+++ b/ScraperFullStackMVC/ScraperFullStackMVC.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Stocks1Controller.cs" />
     <Compile Include="Controllers\StocksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -330,6 +331,11 @@
     <Content Include="Views\Stocks\Details.cshtml" />
     <Content Include="Views\Stocks\Edit.cshtml" />
     <Content Include="Views\Stocks\Index.cshtml" />
+    <Content Include="Views\Stocks1\Create.cshtml" />
+    <Content Include="Views\Stocks1\Delete.cshtml" />
+    <Content Include="Views\Stocks1\Details.cshtml" />
+    <Content Include="Views\Stocks1\Edit.cshtml" />
+    <Content Include="Views\Stocks1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
